    o open the obj file in Blender and edit the playfield mesh (mesh name is "Table1")
    o cut holes into the playfield where you want to place kickers, VUKs and so on
    o export the modified playfield mesh as a separate obj file and import it to VPX
    o in VPX rename the playfield primitive to "playfield_mesh"
    o the playfield primitive doesn't need an image and a material. VPX will use the texture and material from the playfield properties

    Note: VP can only handle a simple mesh plate (with optional holes) as a playfield. Adding other complicated meshes to the playfield (e.g. merge kicker meshes with the playfield) is not supported.
          The "playfield_mesh" is also handled as a special primitive type: its physics settings are copied from the table physics properties, but in addition you can also set "Has Hit Event" and set a "Hit Threshold"
          if you want to be informed that the ball has hit the playfield. Settings like "Toy", "Collidable" or "Overwrite Material Settings" won't work for the "playfield_mesh".
    See example table (File -> New -> Example Table) how to use it.

- add checkbox to sound- and image-manager to use internal name as filename for exporting

- fix "all sounds to rear channels" bug

- add missing implementation for -pov command line option

- remove all table encryption, old locked tables automatically unlock now

- add buttons to video preferences to easily setup defaults for low- or high-end PCs
- add 'Force Bloom Filter off' to video preferences to increase performance on extremely low-end graphics cards (like on tablets)

- update BASS library to 2.4.14

- see core scripts (header of core.vbs) for the respective changelog (version 3.57)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes

- remove Visual Studio 2010 & 2012 support

- updated to latest FreeImage.dll (3.18.0) (currently disabled)
- DirectX 8 port for input handling (currently disabled)
