@@ -5,21 +5,3 @@ VPinball *g_pvp;
 Player *g_pplayer;
 HACCEL g_haccel;
 bool g_fKeepUndoRecords = true;
-
-void ShowError(const char * const sz)
-{
-   MessageBox(NULL, sz, "Error", MB_OK | MB_ICONEXCLAMATION);
-}
-
-void ExitApp()
-{
-   // Quit nicely.
-   if (g_pvp)
-   {
-      g_pvp->Quit();
-   }
-   else
-   {
-      exit(0);
-   }
-}
